--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- ilk foto -->
         <div class="resim baş">
-          <img src="/photo1.png" width="125px" alt="" />
+          <img src="photo1.png" width="125px" alt="" />
           <div class="yan"><div class="üst">
             <h2>Vintage Backbag</h2>
             <p><strong>$54.99</strong> <span>$94.99</span></p>
@@ -89,7 +89,7 @@
 
          <!-- ikinci foto -->
         <div class="resim son">
-          <img src="/photo2.png" width="125px" alt="" />
+          <img src="photo2.png" width="125px" alt="" />
           <div class="yan">
             <div class="üst" >
             <h2>Vintage Backbag</h2>
