--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <form action="">
         <div class="ilk">
-          <h1>Contact İnformation</h1>
+          <h1>Contact Information</h1>
           <div class="doldur">
             <i class="fa-solid fa-envelope"></i>
             <label  for="">Email</label>
