--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
          <!-- SAĞ KISIM ALT TARAF SON -->
       </div>
     </main>
+    <button id="btn">Continue</button>
   </body>
 </html>
