--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <i class="fa-solid fa-earth-europe"></i>
             <label for="">Country</label>
             <select name="Country" id="">
-              <option value="">Turkey</option>
-              <option value="">Japan</option>
-              <option value="">Fınland</option>
-              <option value="">Canada</option>
-              <option value="">Elbistan</option>
+              <option value="Turkey">Turkey</option>
+              <option value="Japan">Japan</option>
+              <option value="Fınland">Fınland</option>
+              <option value="Canada">Canada</option>
+              <option value="Büyük Yapalak">B.Yapalak</option>
             </select>
           </div>
           <div class="doldur posta">
