--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
           <div class="doldur checkbox">
             <input name="Onayla" type="checkbox" id="olmaz" placeholder="" />
-            <label for="">See this information next time</label>
+            <label for="olmaz">See this information next time</label>
           </div>
         </div>
         
