--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
          <!-- SAĞ KISIM ALT TARAF SON -->
       </div>
     </main>
-    <button id="btn" form="myform"  onclick="ert()">Continue</button>
+    <button id="btn" title="Click" form="myform"  onclick="ert()">Continue</button>
     <script>
       // function ert(){
       //   // alert("Yükleniyor...(2 Haftaya)")
