--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <h2>Vintage Backbag</h2>
             <p><strong>$54.99</strong> <span>$94.99</span></p>
             </div><div class="alt">
-              <button onclick="e()"><i class="fa-solid fa-minus" style=" background-color:rgb(230, 219, 219)"></i></button>
-              <p>1</p>
-              <button onclick="er()"><i class="fa-solid fa-plus" style=" background-color:rgb(230, 219, 219)"></i></button>
+              <button class="azalt" onclick="e()"><i class="fa-solid fa-minus" style="pointer-events: none; background-color:rgb(230, 219, 219)"></i></button>
+              <p class="sayı"></p>
+              <button class="arttır" onclick="er()"><i class="fa-solid fa-plus" style="pointer-events: none; background-color:rgb(230, 219, 219)"></i></button>
             </div>
           </div>
         </div>
@@ -97,9 +97,9 @@
             <h2>Vintage Backbag</h2>
             <p><strong>$74.99</strong> <span>$94.99</span></p></div>
             <div class="alt">
-              <button onclick="e()"><i class="fa-solid fa-minus" style=" background-color:rgb(230, 219, 219)"></i></button>
-              <p>1</p>
-              <button onclick="er()"><i class="fa-solid fa-plus" style=" background-color:rgb(230, 219, 219)"></i></button>
+              <button onclick="e1()"><i class="fa-solid fa-minus" style="pointer-events: none; background-color:rgb(230, 219, 219)"></i></button>
+              <p class="sayı1"></p>
+              <button onclick="er1()"><i class="fa-solid fa-plus" style="pointer-events: none; background-color:rgb(230, 219, 219)"></i></button>
             </div>
           </div>
         </div>
@@ -118,17 +118,7 @@
       </div>
     </main>
     <button id="btn" title="Click" form="myform"  onclick="ert()">Continue</button>
-    <script>
-      // function ert(){
-      //   // alert("Yükleniyor...(2 Haftaya)")
-      //   window.location.href = "http://127.0.0.1:5501/result.html";
-      // }  
-      function er(){
-        alert("Az bekleyin...")
-      }  
-      function e(){
-        alert("Emin misin...")
-      }  
-    </script>
+  <script src="app.js"></script>
+  
   </body>
 </html>
